[project]
name = "b200"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Mancuso", email = "7891333+jvmncs@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["modal>=1.0.2"]

[project.scripts]
b200 = "b200:main"

[build-system]
requires = ["uv_build>=0.7.9,<0.8.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"
